fix: align permalink anchor (#199)
* fix: align permalink anchor

* update changelog

--- a/assets/_sass/_structure.scss
+++ b/assets/_sass/_structure.scss
@@ -110,7 +110,7 @@
         .permalink {
           display: none;
           margin-left: 12px;
-          margin-top: 14px;
+          margin-bottom: 8px;
         }
 
         &:hover > .permalink {
